# pytest-opentelemetry

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  traced-tests
.github/workflows/: build-and-test.yml  publish.yml  python-package.yml
src/pytest_opentelemetry/: __init__.py  instrumentation.py  plugin.py  resource.py
tests/: __init__.py  conftest.py  test_plugin.py  test_resource.py  test_sessions.py  test_spans.py
