[metadata]
name = pytest-opentelemetry
version = 0.3.2
author = Chris Guidry
author_email = chris@theguidrys.us
description = A pytest plugin for instrumenting test runs via OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrisguidry/pytest-opentelemetry
project_urls =
    Bug Tracker = https://github.com/chrisguidry/pytest-opentelemetry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opentelemetry-api
    opentelemetry-container-distro
    opentelemetry-sdk
    opentelemetry-semantic-conventions
    pytest

[options.extras_require]
dev =
    black
    build
    isort
    pylint
    pytest<7.0.0  # just until the black warning thing is fixed
    pytest-black
    pytest-cov
    pytest-isort
    pytest-mypy
    pytest-pylint
    pytest-xdist
    twine

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    pytest_opentelemetry = pytest_opentelemetry.plugin
